# craigslist-shop

./: .gitignore  Dockerfile  README.md  inference.py  plot_results.py  run_analysis.sh
.claude/: plan-local-claude-agent.md
.data_cache/: test.parquet  train.parquet  validation.parquet
burgershack/: README.md  __init__.py  analyze_rewards.py  client.py  models.py  openenv.yaml  pyproject.toml  run.py  test_agent.py
burgershack/config/: easy.yaml  hard.yaml  medium.yaml
burgershack/customers/: bulk_buyer.yaml  fake_complaint.yaml  flatterer.yaml  guilt_tripper.yaml  haggler.yaml  impatient.yaml  loyal_regular.yaml  normal.yaml  price_anchorer.yaml  sob_story.yaml
burgershack/server/: __init__.py  app.py  burgershack_environment.py  scoring.py  state_machine.py  supplier.py
craigslist_shop/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  test_agent.py
craigslist_shop/openenv_craigslist_shop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
craigslist_shop/server/: Dockerfile  __init__.py  app.py  craigslist_shop_environment.py  requirements.txt  scoring.py  state_machine.py
craigslist_shop/tasks/: test.json
